--- a/package.json
+++ b/package.json
@@ -11,38 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.3",
-    "@angular/cdk": "~10.2.0-rc.0-sha-7ec514be9",
-    "@angular/common": "^10.0.3",
-    "@angular/compiler": "^10.0.3",
-    "@angular/core": "^10.0.3",
-    "@angular/forms": "^10.0.3",
-    "@angular/material": "~10.2.0-rc.0-sha-7ec514be9",
-    "@angular/platform-browser": "^10.0.3",
-    "@angular/platform-browser-dynamic": "^10.0.3",
-    "@angular/router": "^10.0.3",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
+    "@angular/animations": "^10.1.1",
+    "@angular/cdk": "^10.2.1",
+    "@angular/common": "^10.1.1",
+    "@angular/compiler": "^10.1.1",
+    "@angular/core": "^10.1.1",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "^10.1.1",
+    "@angular/material": "^10.2.1",
+    "@angular/platform-browser": "^10.1.1",
+    "@angular/platform-browser-dynamic": "^10.1.1",
+    "@angular/router": "^10.1.1",
+    "jquery": "^3.5.1",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.1",
-    "@angular/cli": "^10.0.1",
-    "@angular/compiler-cli": "^10.0.3",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "^10.1.1",
+    "@angular/compiler-cli": "^10.1.1",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^12.12.59",
     "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "^3.5.0",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^5.0.0",
-    "karma": "^5.0.0",
+    "karma": "^5.2.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "^7.0.0",
     "ts-node": "^8.3.0",
-    "tslint": "^6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.5"
   }
 }
