--- a/angular.json
+++ b/angular.json
@@ -31,12 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.less"
             ],
-            "scripts": [
-            "node_modules/jquery/dist/jquery.min.js",
-            "src/app/views/nav/functionTest.js",
-            "src/assets/js/externaljsfile.js",
-            "src/assets/js/custom.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -97,10 +92,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.less"
-            ],
+            "styles": [],
             "scripts": []
           }
         },
